# multi-agent-orchestration

./: .env.default  .gitignore  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  init.sql  pyproject.toml  requirements.txt
api_specs/: insurance_api.yaml
app/: config.py  database.py  main.py
app/agents/: api_agent.py  fallback_agent.py  knowledge_agent.py
app/middleware/: logging_middleware.py
app/models/: conversation.py  user.py
app/orchestrator/: state_machine.py
app/routers/: admin.py  auth.py  chat.py
app/utils/: auth.py  logger.py  vector_store.py
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/components/: ChatInterface.tsx  ClaimStatus.tsx  LoginForm.tsx  NewClaimForm.tsx  PolicyCard.tsx
frontend/app/components/atoms/: ChatResult.tsx
frontend/app/types/: chat.ts
mock-api/: Dockerfile  README.md  package-lock.json  package.json
mock-api/src/: app.module.ts
mock-api/src/insurance/: insurance.controller.ts  insurance.service.ts
mock-api/src/insurance/dto/: calculate-premium.dto.ts  create-claim.dto.ts
mock-api/src/insurance/entities/: claim.entity.ts
postman-collection/: Multi Agent Orchestration.postman_collection.json
sample-documents/: sample_policy.txt
