[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "multi-agent-orchestration"
version = "0.1.0"
description = "FastAPI JWT Authentication with Multi-Agent Chat"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.103.2",
    "uvicorn>=0.23.2",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "pydantic>=1.10.12,<2.0.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.0.350",
    "langgraph>=0.0.19",
    "openai>=1.3.7",
    "chromadb>=0.4.18",
    "psycopg2-binary>=2.9.9",
    "sqlalchemy>=2.0.23",
    "pgvector>=0.2.4"
]
